--- a/style_personal_website.css
+++ b/style_personal_website.css
@@ -32,24 +32,23 @@ header p {
     padding: 5% 5% 0% 5%;
     padding-top: 2%;
     margin-top: 0;
-    font-size: min(28px, 1.5rem);
+    font-size: max(20px, 2.5vw);
 
 }
 
 header div {
     font-size: 140%;
     padding-bottom: 1%;
-    font-size: min(45px, 2.5rem);
+    font-size: min(40px, 5vw);
+    position: sticky;
 
 }
 
 header h1 {
-    font-size: min(4rem, 150px);
+    font-size: max(7vw, 50px);
     margin: 0px;
-}
-
-.accent {
-    color: dodgerblue;
+    transition: 0.5s;
+    position: sticky;
 }
 
 .redglow1:hover {
@@ -72,40 +71,83 @@ header h1 {
     border-radius: 30vw;
     box-sizing: border-box;
     border: 5px solid dodgerblue;
+    transition: 1s;
 }
 
 .my_portrait:hover {
+    transform: scale(1.1);
     border-color: red;
 }
 
 #navq {
     color: white;
-    font-size: min(40px, 2rem);
+    font-size: max(25px, 2.7vw);
     text-align: center;
     margin: 2vw;
 }
 
-nav a {
-    padding-left: 0.55rem;
-    padding-right: 0.55rem;
-    padding-top: 3px;
-    padding-bottom: 4px;
-    font-size: min(35px, 1.45rem);
-    text-decoration: none;
-    color: white;
-    background-image: radial-gradient(dodgerblue, transparent);
-    margin: 0;
-    border: 0;
-}
-
-nav a:hover {
-    background-image: radial-gradient(red, transparent);
-    color: white;
+nav{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #navi {
+    width: 90vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin:0;
+    padding: 0;
+    background-color: dodgerblue;
+    border-radius: 1vw;
+    border:1vw solid dodgerblue;
+}
+
+nav a {
+    /* padding: 0.6em 0.6em 0.7em; */
+    padding: 0.5em;
+    font-size: max(20px, 2.5vw);
+    text-decoration: none;
+    color: white;
+    transition: 0.5s;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     text-align: center;
-    margin: 0;
+    width: 100%;
+}
+
+nav a:hover {
+    background-color:red;
+    transform: scale(1.1);
+    z-index: 2;
+    color: white;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0px 5px rgba(0, 0, 0, 0.338);
+    border:2vw solid red;
+    border-radius: 10px;
+    font-size: max(21px, 2.6vw);
+}
+
+@media all and (orientation: portrait) {
+    #navi{
+        width: 50%;
+        flex-direction: column;
+        margin: 0;
+        align-items: center;
+    }
+    nav a{
+        line-height: 1.3em;
+        text-align: center;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        width: 100%;
+    }
 }
 
 .redglow:hover {
@@ -119,8 +161,9 @@ nav a:hover {
     color: white;
     font-size: 2.5rem;
     padding: 2%;
-    padding-top: 15%;
+    padding-top: 6vh;
     margin: 0;
+    position: sticky;
 }
 
 .ci {
@@ -131,10 +174,13 @@ section img {
     border: 5px solid dodgerblue;
     padding: 3px;
     width: 40vw;
+    transition: 0.5s;
+    margin-bottom: 1vh;
 }
 
 section img:hover {
     border-color: red;
+    transform: scale(1.1);
 }
 
 .cc {
@@ -164,44 +210,64 @@ ul {
 }
 
 .cdl {
-    color: lightgray;
-    width: max(250, 70vw);
+    display: flex;
+    flex-direction:column;
     margin-top: 0;
+    width: 99%;
+    align-items: center;
+}
+
+.cdli{
+    color: lightgray;
     font-size: min(28px, 1.5rem);
+    line-height: 2em;
 }
 
 a {
     color: dodgerblue;
+    text-decoration: none;
+    transition: 1s;
 }
 
 a:hover {
     color: red;
+    font-size: 110%;
+}
+
+.accent {
+    color: dodgerblue;
+    transition: 0.5s;
 }
 
 .accent:hover {
     color: red;
+    font-size: 120%;
 }
 
 .sm {
     padding: 1.5vw;
     width: 8vw;
-    text-align: center;
-    align-items: center;
-    text-decoration: none;
-    margin: auto;
-    margin-top: 2vh;
     border: 0;
-    display: inline-flexbox;
 }
 
-.sm:hover {
-    opacity: 0.7;
-    width: 10vw;
-    margin: auto;
+.smbox{
+    width:8vw;
+    transition: 0.2s;
+    align-items:baseline;
+}
+
+.smbox:hover {
+    transform: scale(1.3);
+    z-index: 2;
 }
 
 .smi {
-    text-align: center;
+    width: 90%;
+    padding: 10px;
+    margin: 2vh auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 footer {
