--- a/style_personal_website.css
+++ b/style_personal_website.css
@@ -3,8 +3,8 @@ html {
 }
 
 body {
-    /* background-color: rgb(5, 62, 9); */
     background-color: black;
+    /* background-color: rgb(5, 62, 9); */
     font-family: 'Product Sans', sans-serif;
 }
 
@@ -54,7 +54,8 @@ header h1 {
 .redglow1:hover {
     color: black;
     background-image: radial-gradient(red, transparent);
-    font-size: min(170px, 4.5em);
+    /* font-size: max(7vw, 50px); */
+    transform: scale(1.2);
 }
 
 .landing_page_image {
@@ -64,7 +65,7 @@ header h1 {
 }
 
 .my_portrait {
-    width: 30vw;
+    width: 35vw;
     max-width: 350px;
     margin-left: 20vw;
     margin-right: 20vw;
@@ -106,7 +107,8 @@ nav{
 
 nav a {
     /* padding: 0.6em 0.6em 0.7em; */
-    padding: 0.5em;
+    padding: 0.1em;
+    margin: 0.4em;
     font-size: max(20px, 2.5vw);
     text-decoration: none;
     color: white;
@@ -120,7 +122,7 @@ nav a {
 
 nav a:hover {
     background-color:red;
-    transform: scale(1.1);
+    transform: scale(1.05);
     z-index: 2;
     color: white;
     display: flex;
@@ -150,16 +152,11 @@ nav a:hover {
     }
 }
 
-.redglow:hover {
-    color: black;
-    background-image: radial-gradient(red, transparent);
-    padding: 0.5rem;
-}
 
 .ch {
     text-align: center;
     color: white;
-    font-size: 2.5rem;
+    font-size: max(35px, 5vw);
     padding: 2%;
     padding-top: 6vh;
     margin: 0;
@@ -168,6 +165,21 @@ nav a:hover {
 
 .ci {
     text-align: center;
+}
+
+@media all and (orientation:landscape){
+    .box{
+        display: flex;
+        flex-direction: row;
+        justify-content:center;
+    }
+    section img{
+        margin: 2vw !important;
+    }
+    .cd{
+        margin: 2vw 2vw 2vw !important;
+        padding: 0 !important;
+    }
 }
 
 section img {
@@ -187,8 +199,8 @@ section img:hover {
     color: darkgray;
     text-align: center;
     font-size: max(11px, 1.2rem);
-    padding-top: 1%;
-    padding-bottom: 0.5%;
+    padding-top: 0.2vh;
+    padding-bottom: 0.3vh;
 }
 
 .cd {
@@ -199,7 +211,7 @@ section img:hover {
     width: max(250, 70vw);
     padding: 0.5% 5% 0% 5%;
     margin-top: 0;
-    font-size: min(28px, 1.5rem);
+    font-size: max(18px, 2vw);
 
 }
 
@@ -219,7 +231,7 @@ ul {
 
 .cdli{
     color: lightgray;
-    font-size: min(28px, 1.5rem);
+    font-size: max(18px, 2vw);;
     line-height: 2em;
 }
 
@@ -262,9 +274,8 @@ a:hover {
 }
 
 .smi {
-    width: 90%;
+    width: 90vw;
     padding: 10px;
-    margin: 2vh auto;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -278,10 +289,12 @@ footer {
     margin-left: 0;
     margin-right: 0;
     background-image: linear-gradient(transparent, dodgerblue);
-    font-size: min(28px, 1.5rem);
+    font-size: max(20px, 2.5vw);
+    transition: 0.5s;
 }
 
 footer:hover {
+    font-size: max(23px, 2.7vw);
     background-image: linear-gradient(transparent, red);
 }
 
