Changes Made: 1. Updated and formatted "Hobbies" section.
2. Updated and formatted "Projects" section.

3. Other minor improvements and tweaks.

--- a/style_personal_website.css
+++ b/style_personal_website.css
@@ -1,11 +1,14 @@
 html {
     font-size: 2vw;
+    margin-right: 2vw;
+    margin-left: 2vw;
 }
 
 body {
     background-color: black;
     /* background-color: rgb(5, 62, 9); */
     font-family: 'Product Sans', sans-serif;
+    margin: 0;
 }
 
 .logo {
@@ -87,7 +90,7 @@ header h1 {
     margin: 2vw;
 }
 
-nav{
+nav {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -98,11 +101,11 @@ nav{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    margin:0;
+    margin: 0;
     padding: 0;
     background-color: dodgerblue;
     border-radius: 1vw;
-    border:1vw solid dodgerblue;
+    border: 1vw solid dodgerblue;
 }
 
 nav a {
@@ -117,11 +120,11 @@ nav a {
     flex-direction: row;
     align-items: center;
     text-align: center;
-    width: 100%;
+    /* width: 100%; */
 }
 
 nav a:hover {
-    background-color:red;
+    background-color: red;
     transform: scale(1.05);
     z-index: 2;
     color: white;
@@ -130,25 +133,52 @@ nav a:hover {
     align-items: center;
     justify-content: center;
     box-shadow: 0px 5px rgba(0, 0, 0, 0.338);
-    border:2vw solid red;
+    border: 2vw solid red;
     border-radius: 10px;
     font-size: max(21px, 2.6vw);
 }
 
 @media all and (orientation: portrait) {
-    #navi{
+    #navi {
         width: 50%;
         flex-direction: column;
         margin: 0;
         align-items: center;
     }
-    nav a{
+
+    nav a {
         line-height: 1.3em;
         text-align: center;
         display: flex;
         flex-direction: row;
         justify-content: center;
         width: 100%;
+    }
+
+    .proh {
+        margin-top: 4vh !important;
+        text-align: center !important;
+        margin-bottom: 1vh !important;
+    }
+
+    .carousel-cell {
+        width: 50vw !important;
+    }
+
+    .carousel-cell {
+        width: 50vw;
+        height: fit-content;
+        margin-left: 1vw;
+        background: rgb(55, 62, 55);
+        border-radius: 5px;
+        display: flex;
+        justify-content: center;
+        align-content: center;
+    }
+
+    .carousel-cell img {
+        height: min(50vw, 210px);
+        max-width: 49vw;
     }
 }
 
@@ -167,27 +197,61 @@ nav a:hover {
     text-align: center;
 }
 
-@media all and (orientation:landscape){
-    .box{
+.box {
+    justify-content: center;
+    text-align: center;
+}
+
+@media all and (orientation:landscape) {
+    .box {
         display: flex;
         flex-direction: row;
-        justify-content:center;
+        justify-content: center;
     }
-    section img{
-        margin: 2vw !important;
+
+    section img {
+        margin-top: 2vw;
+        margin-left: 2vw;
     }
-    .cd{
-        margin: 2vw 2vw 2vw !important;
-        padding: 0 !important;
+
+    .cd {
+        padding: 1.9vw !important;
+    }
+
+    /* .cont{
+        display: flex;
+        flex-direction: row;
+    } */
+    .cdli {
+        width: 200px;
+        margin-top: 10vh !important;
+        box-sizing: border-box;
+    }
+
+    .carousel-cell {
+        width: 27vw;
+        height: fit-content;
+        margin-left: 1vw;
+        background: rgb(55, 62, 55);
+        border-radius: 5px;
+        display: flex;
+        justify-content: center;
+        align-content: center;
+    }
+
+    .carousel-cell img {
+        height: min(50vw, 210px);
+        max-width: 26vw;
     }
 }
 
 section img {
     border: 5px solid dodgerblue;
-    padding: 3px;
+    padding: 4px;
     width: 40vw;
     transition: 0.5s;
     margin-bottom: 1vh;
+    /* max-height: 50vh; */
 }
 
 section img:hover {
@@ -198,8 +262,8 @@ section img:hover {
 .cc {
     color: darkgray;
     text-align: center;
-    font-size: max(11px, 1.2rem);
-    padding-top: 0.2vh;
+    font-size: max(13px, 1.5vw);
+    /* padding-top: 0.1vh; */
     padding-bottom: 0.3vh;
 }
 
@@ -212,7 +276,7 @@ section img:hover {
     padding: 0.5% 5% 0% 5%;
     margin-top: 0;
     font-size: max(18px, 2vw);
-
+    min-width: 50vw;
 }
 
 ul {
@@ -223,16 +287,18 @@ ul {
 
 .cdl {
     display: flex;
-    flex-direction:column;
+    flex-direction: column;
     margin-top: 0;
     width: 99%;
     align-items: center;
 }
 
-.cdli{
+.cdli {
     color: lightgray;
-    font-size: max(18px, 2vw);;
-    line-height: 2em;
+    font-size: max(25px, 2.5vw);
+    ;
+    text-align: center;
+    margin-top: 5vh;
 }
 
 a {
@@ -262,10 +328,10 @@ a:hover {
     border: 0;
 }
 
-.smbox{
-    width:8vw;
+.smbox {
+    width: 8vw;
     transition: 0.2s;
-    align-items:baseline;
+    align-items: baseline;
 }
 
 .smbox:hover {
@@ -281,6 +347,35 @@ a:hover {
     justify-content: space-between;
 }
 
+.proh {
+    color: lightgray;
+    font-size: max(25px, 2.5vw);
+    ;
+    text-align: left;
+    margin-bottom: 2vh;
+    margin-top: 2vh;
+}
+
+.prod {
+    color: lightgray;
+    text-align: justify;
+    justify-content: center;
+    padding: 0.6% 5% 0% 5%;
+    font-size: max(18px, 2vw);
+}
+
+.proh a{
+    text-decoration: none;
+}
+.proh a img{
+    transition: 0.2s;
+}
+
+.proh a img:hover{
+    transform: scale(1.2);
+}
+
+
 footer {
     color: white;
     text-align: center;
@@ -291,6 +386,7 @@ footer {
     background-image: linear-gradient(transparent, dodgerblue);
     font-size: max(20px, 2.5vw);
     transition: 0.5s;
+    float: center;
 }
 
 footer:hover {
@@ -308,4 +404,9 @@ footer:hover {
 
 ::-webkit-scrollbar-thumb:hover {
     background: red;
+}
+
+#gl {
+    text-align: center;
+    margin-top: 2vh;
 }
